# kittymc

./: .gitignore  Cargo.toml  README.md
kittymc_lib/: Cargo.toml
kittymc_lib/src/: error.rs  lib.rs  utils.rs
kittymc_lib/src/packets/: handshake_00.rs  mod.rs  packet_serialization.rs
kittymc_lib/src/packets/client/login/: disconnect_login_00.rs  mod.rs  set_compression_03.rs  success_02.rs
kittymc_lib/src/packets/client/play/: animation_06.rs  block_break_animation_08.rs  block_change_0b.rs  chat_message_02.rs  chat_message_0f.rs  chunk_data_20.rs  destroy_entities_32.rs  disconnect_1a.rs  entity_head_look_36.rs  entity_look_28.rs  entity_metadata_3c.rs  entity_relative_move_26.rs  entity_status_1b.rs  held_item_change_3a.rs  join_game_01.rs  join_game_23.rs  keep_alive_00.rs  keep_alive_1f.rs  map_chunk_bulk_26.rs  mod.rs  player_abilities_2c.rs  player_abilities_39.rs  player_list_item_2e.rs  plugin_message_18.rs  (+14 more)
kittymc_lib/src/packets/server/: handshake.rs  mod.rs
kittymc_lib/src/subtypes/: components.rs  metadata.rs  mod.rs  state.rs
kittymc_lib/tests/: mod.rs
kittymc_lib/tests/packet_tests/: handshake_00.rs  login_00.rs  mod.rs  utils.rs
kittymc_lib/tests/packet_tests/client/: play.rs
kittymc_lib/tests/packet_tests/server/: handshake.rs  login.rs
kittymc_lib/tests/type_tests/: mod.rs
kittymc_server/: Cargo.toml
kittymc_server/src/: chunk_manager.rs  client.rs  inventory.rs  main.rs  packet_routing.rs  player.rs  server.rs
kittymc_server/src/chunking/: chunk_generator.rs  chunk_manager.rs  chunk_unloader.rs  increasing_ticker.rs  mod.rs
(+27 files in other folders)
