[package]
name = "kittymc-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.6"
proc-macro2 = "1.0.92"
kittymc-macros = { path = "../kittymc_macros" }
integer-encoding = "4.0.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
md5 = "0.7.0"
miniz_oxide = "0.8.0"
num-traits = "0.2.19"
nalgebra = "0.33.2"
bitflags = "2.6.0"
derive_builder = "0.20.2"
rand = "0.9.0-beta.1"
log = "0.4.22"

[dev-dependencies]
anyhow = "1.0.94"