[package]
name = "kittymc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kittymc-lib = { path = "../kittymc_lib" }
uuid = { version = "1.11.0", features = ["v3"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = "0.4.22"
rand = "0.9.0-beta.1"